# RTO-SPC-Dashboard-for-Semiconductor-Tool-Health-Monitoring

./: README.md
github_project_export/: GITHUB_UPLOAD_MANIFEST.md  README.md  pyproject.toml  requirements.txt
github_project_export/app/: dashboard.py
github_project_export/app/pages/: 1_Tool_Health_Summary.py  (+4 more)
github_project_export/configs/: pm_deferral_default.yaml
github_project_export/data/: excursion_events.csv  monitor_measurements.csv  spc_results.csv
github_project_export/docs/: architecture_overview.md  chatgpt_review_package.md  confidentiality_note.md  data_dictionary.md  demo_script.md  deployment_guide.md  interview_guide.md  interview_talking_points.md  methodology.md  methodology_summary.md  portfolio_case_study.md  project_limitations.md  recruiter_quick_start.md  release_checklist.md  reporting_workflow.md  schema_validation.md
github_project_export/notebooks/: 06_full_pipeline_demo.ipynb
github_project_export/scripts/: create_github_export.py  create_review_bundle.py  generate_sample_data.py  validate_data.py  validate_release.py
github_project_export/tests/: test_ai_summary.py  test_control_limits.py  test_data_generation.py  test_data_pipeline.py  test_documentation_required_files.py  test_excursion_scoring.py  test_excursion_scoring_corrected.py  test_fleet_chart_helpers.py  test_fleet_charts.py  test_particle_rules.py  test_particle_rules_corrected.py  test_release_validation.py  test_review_bundle.py  test_schema_validation.py  test_spc_rules.py  test_step6_phase1_gate.py  test_thickness_monitor_rules.py  test_tool_health.py
(+26 files in other folders)
